--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,5 +12,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
-
+       //杀杀杀杀杀杀
 </RelativeLayout>
