--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,8 +9,19 @@
     tools:context="com.example.anothertest.MainActivity" >
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="159dp"
+        android:layout_toEndOf="@+id/textView2"
+        android:text="@string/new_show_message" />
 
 </RelativeLayout>
